[package]
name = "kitesabre-control"
version = "0.1.0"
edition = "2024"

[dependencies]
kitesabre-messages = {path = "../kitesabre-messages"}
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread"]}
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6.2", features = ["std"] }
log = "0.4.26"
serialport = "4.7.0"
static_cell = "2.1.0"
rerun = { version = "0.24.1", default-features = false , features = ["sdk"]}
