[package]
name = "kitesabre-messages"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { version = "1.0.0", default-features = false, features = ["use-defmt", "heapless"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
cobs = { version = "0.2.3", default-features = false }
heapless = { version = "0.7", default-features = false }
